# viral_channel

./: .env.example  .gitignore  BLOCKED.md  CLAIMED.md  DESIGN.md  HEARTBEAT.md  IMPLEMENT.md  PROGRESS.md  README.md  REVIEW.md  SPEC.md  TASK.md  THINKING_DESIGN.md  THINKING_IMPLEMENT.md  THINKING_SPEC.md  conftest.py  pyproject.toml  requirements.txt
.agent/: config.yaml  context.md
.agent/lessons/: auto-task-20260228010100-build-configuration-system.md  auto-task-20260228010200-implement-sqlite-database.md  auto-task-20260228010300-create-structured-logging.md  auto-task-20260228020100-fix-conftest-imports.md  auto-task-20260228020200-complete-database-tables.md  auto-task-20260228020300-build-llm-abstraction.md  auto-task-20260228020400-create-ffmpeg-wrapper.md  auto-task-20260228020500-build-youtube-api-client.md
config/: config.yaml
config/prompts/: example_template.j2
docs/: XC740XD_Architecture_LLM_Analysis.md
scripts/: init_database.py  setup_youtube_oauth.py
src/: __init__.py  config.py  database.py  main.py  models.py
src/acquisition/: __init__.py  downloader.py
src/analysis/: __init__.py  most_replayed.py
src/analytics/: __init__.py  channel_analytics.py
src/compilation/: __init__.py  compiler.py  ffmpeg_wrapper.py  subtitle_renderer.py
src/discovery/: __init__.py  dataclasses.py  reddit_source.py  youtube_source.py
src/llm/: __init__.py  client.py  prompts.py
src/narration/: __init__.py  (+2 more)
tests/: conftest.py  test_config.py  test_database.py  test_ffmpeg.py  test_llm_client.py  test_logging.py  test_reddit.py  test_youtube.py
(+11 files in other folders)
