[tool.poetry]
name = "viral-channel"
version = "0.1.0"
description = "Automated YouTube content pipeline -- Last SiX Hours"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
pyyaml = "^6.0"
sqlalchemy = "^2.0"
aiohttp = "^3.9"
httpx = "^0.27"
yt-dlp = "^2024.0"
openai = "^1.0"
jinja2 = "^3.1"
TTS = "^0.22"
piper-tts = "^1.2"
python-telegram-bot = "^20.0"
google-api-python-client = "^2.0"
google-auth-oauthlib = "^1.0"
praw = "^7.0"
Pillow = "^10.0"
APScheduler = "^3.10"
numpy = "^1.26"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"